feat: :sparkles: Add authorization token Bearer Token

--- a/api-number-at-letters/appsettings.json
+++ b/api-number-at-letters/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "key": "this is my custom Secret key for authentication"
+  }
 }
