--- a/api-number-at-letters/appsettings.json
+++ b/api-number-at-letters/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "key": "this is my custom Secret key for authentication"
+    "key": "C9F0F895FB98AB9159F51FD0297E236D"
   }
 }
